--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
 @import "/node_modules/bootstrap/scss/bootstrap.scss";
 
+@font-face {
+  font-family: "Inter";
+  src: url("/public/assets/fonts/Inter-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("/public/assets/fonts/Inter-Bold.ttf");
+  font-weight: bold;
+}
+
 video {
   clear: both;
   display: block;
@@ -19,6 +30,7 @@ html {
   width: 100%;
   background: url("/public/assets/images/background.png") no-repeat center center fixed;
   background-size: cover;
+  font-family: Inter !important;
 }
 
 
@@ -175,4 +187,43 @@ html {
 
 .purple {
   color: #7A0B85;
+}
+
+.listVoiceCommands {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  color: white;
+  background: rgba(245, 245, 245, 0.12);
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 14px;
+}
+
+.listVoiceCommands ul,
+.listOfGestures ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.listOfGestures {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  color: white;
+  background: rgba(245, 245, 245, 0.12);
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 14px;
+}
+
+.close-button-list {
+  padding: 0px !important;
+  margin: 0px !important;
+  position: absolute !important;
+  right: 10px !important;
+  top: 5px !important;
+  color: white !important;
+  font-size: 18px !important;
 }
