--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,8 @@ html {
 
 .output_canvas {
   position: absolute;
-  top: 250px;
+  z-index: 0;
+  top: 0px;
   right: 0px;
   margin: 0 auto;
   width: 100% !important;
